Regression: Dragging move gizmo causes crash in sculpt mode #102337

Closed
opened 2022-11-07 21:00:26 +01:00 by Szymon Warunek · 22 comments

Windows 11
Operating system: Windows 11 Pro x64
Graphics card: NVIDIA GeForce GTX 1070 8GB

Blender 3.40 Beta
Broken: version: 3.4.0 Beta, branch: master, commit date: 2022-11-03 18:34, hash: 1452b44352
Worked: (newest version of Blender that worked as expected)

Short description
when I try to use move (object) - by using a move tool - in sculpt mode,Blender - suddenly crashes (version 3.40 Beta)

Exact steps for others to reproduce the error

**Windows 11** Operating system: Windows 11 Pro x64 Graphics card: NVIDIA GeForce GTX 1070 8GB **Blender 3.40 Beta** Broken: version: 3.4.0 Beta, branch: master, commit date: 2022-11-03 18:34, hash: `1452b44352` Worked: (newest version of Blender that worked as expected) **Short description** when I try to use move (object) - by using a move tool - in sculpt mode,Blender - suddenly crashes (version 3.40 Beta) **Exact steps for others to reproduce the error** - Open .blend - Switch to sculpt mode -> drag move tool gizmo [sculpt move tool error.blend](https://archive.blender.org/developer/F13865876/sculpt_move_tool_error.blend) [blender 3.3.0 projects 2022.7z](https://archive.blender.org/developer/F13865899/blender_3.3.0_projects_2022.7z)
Author

Added subscriber: @szymi

Added subscriber: @szymi
Author

sculpt move tool - crushes blender

sculpt move tool - crushes blender
Author
![sculpt move tool error.jpg](https://archive.blender.org/developer/F13865333/sculpt_move_tool_error.jpg) ![sculpt move tool - crushes blender.jpg](https://archive.blender.org/developer/F13865335/sculpt_move_tool_-_crushes_blender.jpg) [sculpt move tool - crushes blender - version 3.40 Beta.mov](https://archive.blender.org/developer/F13865338/sculpt_move_tool_-_crushes_blender_-_version_3.40_Beta.mov)

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Hello. Can you attach your file as an example and also check it out for today's version 3.4? I can't reproduce this using texture animation cube

Hello. Can you attach your file as an example and also check it out for today's version 3.4? I can't reproduce this using texture animation cube
Author

i am sending my project to you.Currently - i am using Blender 3.4.0 Beta{F13865313}

i am sending my project to you.Currently - i am using Blender 3.4.0 Beta{[F13865313](https://archive.blender.org/developer/F13865313/sculpt_move_tool_-_crushes_blender.blend)}

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

I can't reproduce the crash in today's 3.4 and 3.5 with your file. Also, please, try to simplify the example files as much as possible, so that it would be easier to download and check them.

I can't reproduce the crash in today's 3.4 and 3.5 with your file. Also, please, try to simplify the example files as much as possible, so that it would be easier to download and check them.
Author

i am uploading simplified version of the scene - i left only 2 polygon objects.That issue - what I have reported before - is still remaining (sculpt move tool error) - when i try to use move tool in sculpt mode - Blender is still crashing.sculpt move tool error.blend

i am uploading simplified version of the scene - i left only 2 polygon objects.That issue - what I have reported before - is still remaining (sculpt move tool error) - when i try to use move tool in sculpt mode - Blender is still crashing.[sculpt move tool error.blend](https://archive.blender.org/developer/F13865876/sculpt_move_tool_error.blend)
Author

sculpt move tool error (updated scene) error still remains.jpg sculpt move tool error (updated scene) error still remains.jpg

![sculpt move tool error (updated scene) error still remains.jpg](https://archive.blender.org/developer/F13865894/sculpt_move_tool_error__updated_scene__error_still_remains.jpg) sculpt move tool error (updated scene) error still remains.jpg
Author

i am also attaching a zip file of the scene{F13865899} - sculpt move tool error (updated scene) error still remains - Blender 3.4.0 Beta.The name of zip file - I was supposed to rename.

i am also attaching a zip file of the scene{[F13865899](https://archive.blender.org/developer/F13865899/blender_3.3.0_projects_2022.7z)} - sculpt move tool error (updated scene) error still remains - Blender 3.4.0 Beta.The name of zip file - I was supposed to rename.
Pratik Borhade changed title from sculpt move tool - crushes blender to Dragging move gizmo causes crash in sculpt mode 2022-11-08 05:10:01 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. I'm able to trigger the crash in 3.4, 3.5. I'll check

Stack trace:
blender.exe         :0x00007FF6CFB32230  plane_from_point_normal_v3 C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\math_geom.c:210
blender.exe         :0x00007FF6CF1B82A0  SCULPT_brush_test_init_with_falloff_shape C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.c:1778
blender.exe         :0x00007FF6CF1BF3E0  calc_area_normal_and_center_task_cb C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.c:1949
blender.exe         :0x00007FF6CFB40570  BLI_task_parallel_range C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_range.cc:127
blender.exe         :0x00007FF6CF1BC850  SCULPT_pbvh_calc_area_normal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.c:2217
blender.exe         :0x00007FF6CF1D27D0  SCULPT_filter_cache_init C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_filter_mesh.c:194
blender.exe         :0x00007FF6CF1D0150  ED_sculpt_init_transform C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_transform.c:66
blender.exe         :0x00007FF6CF2471B0  createTransSculpt C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform_convert_sculpt.c:90
blender.exe         :0x00007FF6CF21A9D0  createTransData C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform_convert.c:1195
blender.exe         :0x00007FF6CF2176A0  initTransform C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform.c:1837
blender.exe         :0x00007FF6CF213A30  transformops_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform_ops.c:385
blender.exe         :0x00007FF6CF2135E0  transform_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform_ops.c:501
blender.exe         :0x00007FF6CE9AF820  wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1446
blender.exe         :0x00007FF6CE9AEEC0  wm_operator_call_internal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1683
blender.exe         :0x00007FF6CE9B1DF0  WM_operator_name_call_ptr C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1698
blender.exe         :0x00007FF6CE9D3B50  WM_gizmo_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo.c:244
blender.exe         :0x00007FF6CE9C3C70  wm_gizmomap_modal_set C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_map.c:1076
blender.exe         :0x00007FF6CE9CDB10  gizmo_tweak_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_group.c:575
blender.exe         :0x00007FF6CE9AF820  wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1446
blender.exe         :0x00007FF6CE9AD150  wm_handler_operator_call C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2478
blender.exe         :0x00007FF6CE9AE9E0  wm_handlers_do_keymap_with_gizmo_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2931
blender.exe         :0x00007FF6CE9ADD40  wm_handlers_do_gizmo_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3072
blender.exe         :0x00007FF6CE9AE340  wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3273
blender.exe         :0x00007FF6CE9AD760  wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3372
blender.exe         :0x00007FF6CE9B3A90  wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3979
blender.exe         :0x00007FF6CE999D70  WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:643
blender.exe         :0x00007FF6CE686BA0  main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:580
blender.exe         :0x00007FF6CFC60F04  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FF9E1BB54D0  BaseThreadInitThunk
ntdll.dll           :0x00007FF9E25C4830  RtlUserThreadStart```
Hi, thanks for the report. I'm able to trigger the crash in 3.4, 3.5. I'll check ```lines=10 Stack trace: blender.exe :0x00007FF6CFB32230 plane_from_point_normal_v3 C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\math_geom.c:210 blender.exe :0x00007FF6CF1B82A0 SCULPT_brush_test_init_with_falloff_shape C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.c:1778 blender.exe :0x00007FF6CF1BF3E0 calc_area_normal_and_center_task_cb C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.c:1949 blender.exe :0x00007FF6CFB40570 BLI_task_parallel_range C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_range.cc:127 blender.exe :0x00007FF6CF1BC850 SCULPT_pbvh_calc_area_normal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.c:2217 blender.exe :0x00007FF6CF1D27D0 SCULPT_filter_cache_init C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_filter_mesh.c:194 blender.exe :0x00007FF6CF1D0150 ED_sculpt_init_transform C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_transform.c:66 blender.exe :0x00007FF6CF2471B0 createTransSculpt C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform_convert_sculpt.c:90 blender.exe :0x00007FF6CF21A9D0 createTransData C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform_convert.c:1195 blender.exe :0x00007FF6CF2176A0 initTransform C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform.c:1837 blender.exe :0x00007FF6CF213A30 transformops_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform_ops.c:385 blender.exe :0x00007FF6CF2135E0 transform_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\transform\transform_ops.c:501 blender.exe :0x00007FF6CE9AF820 wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1446 blender.exe :0x00007FF6CE9AEEC0 wm_operator_call_internal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1683 blender.exe :0x00007FF6CE9B1DF0 WM_operator_name_call_ptr C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1698 blender.exe :0x00007FF6CE9D3B50 WM_gizmo_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo.c:244 blender.exe :0x00007FF6CE9C3C70 wm_gizmomap_modal_set C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_map.c:1076 blender.exe :0x00007FF6CE9CDB10 gizmo_tweak_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_group.c:575 blender.exe :0x00007FF6CE9AF820 wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1446 blender.exe :0x00007FF6CE9AD150 wm_handler_operator_call C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2478 blender.exe :0x00007FF6CE9AE9E0 wm_handlers_do_keymap_with_gizmo_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2931 blender.exe :0x00007FF6CE9ADD40 wm_handlers_do_gizmo_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3072 blender.exe :0x00007FF6CE9AE340 wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3273 blender.exe :0x00007FF6CE9AD760 wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3372 blender.exe :0x00007FF6CE9B3A90 wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3979 blender.exe :0x00007FF6CE999D70 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:643 blender.exe :0x00007FF6CE686BA0 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:580 blender.exe :0x00007FF6CFC60F04 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FF9E1BB54D0 BaseThreadInitThunk ntdll.dll :0x00007FF9E25C4830 RtlUserThreadStart```
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

Unable to find exact commit because of #101478 (Regression: Crash when Sculpt Mode is selected.)
I guess crash introduced with 65900d88a8
@JosephEagar , can you check?

Unable to find exact commit because of #101478 (Regression: Crash when Sculpt Mode is selected.) I guess crash introduced with 65900d88a8 @JosephEagar , can you check?
Pratik Borhade changed title from Dragging move gizmo causes crash in sculpt mode to Regression: Dragging move gizmo causes crash in sculpt mode 2022-11-08 06:04:41 +01:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

@JosephEagar Hey, can you please check on this? We are going to Bcon4 already next week.

@JosephEagar Hey, can you please check on this? We are going to Bcon4 already next week.

This issue was referenced by 48143ab001

This issue was referenced by 48143ab00156f94687dcdddd74701e13a07ebd8a

This issue was referenced by 0ed4865fd0

This issue was referenced by 0ed4865fd030ea169ab700843b06b747b06382be
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-11-28 22:12:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102337
No description provided.