Sculpt: Fix T102337: Null pointer error circle (tube) brush test code